--- a/Lab 5/index.html
+++ b/Lab 5/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
 
-    <link rel="stylesheet" href="Lab 5/styles.css" type="text/css">
+    <link rel="stylesheet" a href="Lab 5/styles.css" type="text/css">
 
 </head>
 <body class="page-home">
