--- a/Lab 5/contact.html
+++ b/Lab 5/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Page</title>
 
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link a href="styles.css" rel="stylesheet" type="text/css">
 
 </head>
 <body class="page-contact">
@@ -19,10 +19,10 @@
     </header>
 
     <main>
-
-        <button>Home</button>
-        <button>Contact</button>
-
+        <div>
+            <button >Home</button>
+            <button>Contact</button>
+        </div>
         <form>
             <div>
                 <label for="name">Your name:</label>
