--- a/Lab 5/contact.html
+++ b/Lab 5/contact.html
@@ -13,16 +13,22 @@
     
     <header>
         <div class="banner">
-            <img src="Lab 5/images/bubble.jpg" alt="Bubble">
+            <img src="images/bubble.jpg" alt="Bubble">
             <h1>Contact Page</h1>
+        </div>
+
+        <div class="navigation2">
+            <a href="index.html" id="home2">
+                <button>Home</button>
+            </a>
+
+            <a href="contact.html" id="contact2">
+                <button>Contact Us</button>
+            </a>
         </div>
     </header>
 
     <main>
-        <div>
-            <button >Home</button>
-            <button>Contact</button>
-        </div>
         <form>
             <div>
                 <label for="name">Your name:</label>
@@ -44,7 +50,7 @@
     </main>
 
     <footer>
-
+        <p>Created by Erwin Aguilar</p>
     </footer>
     
 </body>
