--- a/Lab 5/index.html
+++ b/Lab 5/index.html
@@ -6,24 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
 
-    <link rel="stylesheet" a href="Lab 5/styles.css" type="text/css">
+    <link rel="stylesheet" a href="styles.css" type="text/css">
 
 </head>
 <body class="page-home">
     
     <header>
         <div class="banner">
-            <img src="Lab 5/images/bubble.jpg" alt="Bubble">
+            <img src="images/bubble.jpg" alt="Bubble">
             <h1>Homepage</h1>
+        </div>
+
+        <div class="navigation">
+            <a href="index.html" id="home">
+                <button>Home</button>
+            </a>
+
+            <a href="contact.html" id="contact">
+                <button>Contact Us</button>
+            </a>
         </div>
     </header>
 
     <main>
         <h2>Our Story</h2>
-        <p>blah blah blah blah blah blah</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+            elit, sed do eiusmod tempor incididunt ut labore et 
+            dolore magna aliqua. Adipiscing tristique risus nec 
+            feugiat in fermentum posuere urna nec.</p>
 
         <h2>Our Products</h2>
-        <p>The goods :)</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+            elit, sed do eiusmod tempor incididunt ut labore et 
+            dolore magna aliqua. Adipiscing tristique risus nec 
+            feugiat in fermentum posuere urna nec.</p>
     </main>
 
     <footer>
