--- a/Lab 5/contact.html
+++ b/Lab 5/contact.html
@@ -13,7 +13,7 @@
     
     <header>
         <div class="banner">
-            <img src="images/bubble.jpg" alt="Bubble">
+            <img id="logo" src="images/bubble.jpg" alt="Bubble">
             <h1>Contact Page</h1>
         </div>
 
@@ -51,7 +51,11 @@
 
     <footer>
         <p>Created by Erwin Aguilar</p>
-        <p>Follow us on</p>
+        <p id="social">Follow us on 
+            <a href="#">Facebook</a>
+            <a href="#">Instagram</a>
+            <a href="#">YouTube</a>
+        </p>
     </footer>
     
 </body>
