--- a/Lab 5/contact.html
+++ b/Lab 5/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Page</title>
 
-    <link a href="styles.css" rel="stylesheet" type="text/css">
+    <link href="styles/styles.css" rel="stylesheet" type="text/css">
 
 </head>
 <body class="page-contact">
@@ -17,15 +17,12 @@
             <h1>Contact Page</h1>
         </div>
 
-        <div class="navigation2">
-            <a href="index.html" id="home2">
-                <button>Home</button>
-            </a>
+        <button id="home"><a href="index.html">
+            Home</a></button>
+        <br>
+        <button id="contact"><a href="contact.html">
+            Contact Us</a></button>
 
-            <a href="contact.html" id="contact2">
-                <button>Contact Us</button>
-            </a>
-        </div>
     </header>
 
     <main>
