--- a/Lab 5/index.html
+++ b/Lab 5/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
 
-    <link rel="stylesheet" a href="styles.css" type="text/css">
+    <link href="styles/styles.css" rel="stylesheet" type="text/css">
 
 </head>
 <body class="page-home">
@@ -17,15 +17,11 @@
             <h1>Homepage</h1>
         </div>
 
-        <div class="navigation">
-            <a href="index.html" id="home">
-                <button>Home</button>
-            </a>
-
-            <a href="contact.html" id="contact">
-                <button>Contact Us</button>
-            </a>
-        </div>
+        <button id="home"><a href="index.html">
+            Home</a></button>
+        <br>
+        <button id="contact"><a href="contact.html">
+            Contact Us</a></button>
     </header>
 
     <main>
