--- a/Lab 5/index.html
+++ b/Lab 5/index.html
@@ -17,11 +17,11 @@
             <h1>Homepage</h1>
         </div>
 
-        <button id="home"><a href="index.html">
-            Home</a></button>
+        <a href="index.html" id="home"><button type="button">
+            Home</button></a>
         <br>
-        <button id="contact"><a href="contact.html">
-            Contact Us</a></button>
+        <a href="contact.html" id="contact"><button type="button">
+            Contact Us</button></a>
     </header>
 
     <main>
