--- a/Lab 5/contact.html
+++ b/Lab 5/contact.html
@@ -17,18 +17,20 @@
             <h1>Contact Page</h1>
         </div>
 
-        <a href="index.html" id="home"><button>
-            Home</button></a>
-        <br>
-        <a href="contact.html" id="contact"><button type="button">
-            Contact Us</button></a>
+        <form class="navigation">
+            <button type="button" onclick="window.location.href=
+            'index.html';">Home</button>
+            <br>
+            <button type="button" onclick="window.location.href=
+            'contact.html';">Contact</button>
+        </form>
     </header>
 
     <main>
         <form>
             <div>
                 <label for="name">Your name:</label>
-                <input type =text name="name" id="name">
+                <input type="text" name="name" id="name">
             </div>
                 
             <div>
