--- a/Lab 5/index.html
+++ b/Lab 5/index.html
@@ -17,11 +17,13 @@
             <h1>Homepage</h1>
         </div>
 
-        <a href="index.html" id="home"><button type="button">
-            Home</button></a>
-        <br>
-        <a href="contact.html" id="contact"><button type="button">
-            Contact Us</button></a>
+        <form class="navigation">
+            <button type="button" onclick="window.location.href=
+            'index.html';">Home</button>
+            <br>
+            <button type="button" onclick="window.location.href=
+            'contact.html';">Contact</button>
+        </form>
     </header>
 
     <main>
