--- a/Assignment 2/profile.html
+++ b/Assignment 2/profile.html
@@ -16,7 +16,7 @@
             rel="stylesheet">
     </head>
 
-    <body class="profile">
+    <body>
         <header>
             <div class="fixed-width flex">
                 <img src="images/logo.png" alt="widget logo">
