--- a/Assignment 2/timesheet.html
+++ b/Assignment 2/timesheet.html
@@ -13,7 +13,7 @@
             href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab&display=swap"
             rel="stylesheet">
     </head>
-    <body class="timesheet">
+    <body>
         <header>
             <div class="fixed-width flex">
                 <img src="images/logo.png" alt="widget logo">
